Add ghost death, eaten, retreat, and points logic

--- a/Cap-Man/Cap-Man.vcxproj
+++ b/Cap-Man/Cap-Man.vcxproj
@@ -154,12 +154,17 @@
     <ClCompile Include="CapManAttackedSystem.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="ColorGraphicsComponent.cpp" />
+    <ClCompile Include="DeathComponent.cpp" />
     <ClCompile Include="DirectionAnimationSystem.cpp" />
     <ClCompile Include="DirectionInputComponent.cpp" />
     <ClCompile Include="DrawSystem.cpp" />
+    <ClCompile Include="EatableComponent.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameEntities.cpp" />
     <ClCompile Include="GameEvents.cpp" />
+    <ClCompile Include="GhostDeathAnimationSystem.cpp" />
+    <ClCompile Include="GhostDeathRetreatSystem.cpp" />
+    <ClCompile Include="GhostEatenSystem.cpp" />
     <ClCompile Include="IdleAnimationSystem.cpp" />
     <ClCompile Include="LifeCollisionComponent.cpp" />
     <ClCompile Include="PowerupCollectorComponent.cpp" />
@@ -167,6 +172,7 @@
     <ClCompile Include="PseudoRandomDirectionSystem.cpp" />
     <ClCompile Include="ResetComponent.cpp" />
     <ClCompile Include="ResetSystem.cpp" />
+    <ClCompile Include="RetreatUponDeathComponent.cpp" />
     <ClCompile Include="SystemControllerComponent.cpp" />
     <ClCompile Include="NodeWithCost.cpp" />
     <ClCompile Include="PathfindingSystem.cpp" />
@@ -225,12 +231,17 @@
     <ClInclude Include="ColorGraphicsComponent.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ComponentStore.h" />
+    <ClInclude Include="DeathComponent.h" />
     <ClInclude Include="DirectionAnimationSystem.h" />
     <ClInclude Include="DirectionInputComponent.h" />
     <ClInclude Include="Drawable.h" />
     <ClInclude Include="DrawSystem.h" />
+    <ClInclude Include="EatableComponent.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="GhostDeathAnimationSystem.h" />
+    <ClInclude Include="GhostDeathRetreatSystem.h" />
+    <ClInclude Include="GhostEatenSystem.h" />
     <ClInclude Include="IdleAnimationSystem.h" />
     <ClInclude Include="LifeCollisionComponent.h" />
     <ClInclude Include="PowerupCollectorComponent.h" />
@@ -238,6 +249,7 @@
     <ClInclude Include="PseudoRandomDirectionSystem.h" />
     <ClInclude Include="ResetComponent.h" />
     <ClInclude Include="ResetSystem.h" />
+    <ClInclude Include="RetreatUponDeathComponent.h" />
     <ClInclude Include="SystemControllerComponent.h" />
     <ClInclude Include="NodeWithCost.h" />
     <ClInclude Include="PathfindingSystem.h" />
