--- a/Cap-Man/Cap-Man.vcxproj
+++ b/Cap-Man/Cap-Man.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="GhostDeathAnimationSystem.cpp" />
     <ClCompile Include="GhostDeathRetreatSystem.cpp" />
     <ClCompile Include="GhostEatenSystem.cpp" />
+    <ClCompile Include="GraphicsComponent.cpp" />
     <ClCompile Include="IdleAnimationSystem.cpp" />
     <ClCompile Include="LifeCollisionComponent.cpp" />
     <ClCompile Include="PowerupCollectorComponent.cpp" />
@@ -209,6 +210,8 @@
     <ClCompile Include="System.cpp" />
     <ClCompile Include="TeleportComponent.cpp" />
     <ClCompile Include="TeleportSystem.cpp" />
+    <ClCompile Include="TemporaryExistenceComponent.cpp" />
+    <ClCompile Include="TemporaryExistenceSystem.cpp" />
     <ClCompile Include="TestAnimation.cpp" />
     <ClCompile Include="TestMap.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -291,6 +294,8 @@
     <ClInclude Include="System.h" />
     <ClInclude Include="TeleportComponent.h" />
     <ClInclude Include="TeleportSystem.h" />
+    <ClInclude Include="TemporaryExistenceComponent.h" />
+    <ClInclude Include="TemporaryExistenceSystem.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="UID.h" />
